# kekekabu

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  aqua.yaml  justfile  引き継ぎ資料.md
docs/tachibana-api/: README.md  api-summary.md  api_reference_v4r8.md  faq.md  order-status-codes.md
docs/tachibana-api/archive-v4r7/: api_overview_v4r7.txt
migrations/: V1__initial_schema.sql  V2__add_account_balance.sql
openspec/changes/anthropic-tool-use-structured-output/: design.md  tasks.md
openspec/changes/api-response-uncompress/: design.md  proposal.md  tasks.md
openspec/changes/demo-environment/: design.md  tasks.md
openspec/changes/trait-based-di/: design.md  proposal.md
openspec/changes/watch-command/: tasks.md
openspec/changes/workflow-subcommand/: proposal.md
openspec/specs/account-sync/: spec.md
openspec/specs/budget/: spec.md
openspec/specs/config/: spec.md
openspec/specs/data-pipeline/: spec.md
openspec/specs/database/: spec.md
skills/tachibana-docs/: SKILL.md
src/: circuit_breaker.rs  config.rs  indicators.rs  jquants.rs  lib.rs  main.rs  notification.rs  output.rs  portfolio.rs  spec.rs
src/cmd/: config.rs  db.rs  discover.rs  eval.rs  execute.rs  fetch.rs  mod.rs  report.rs  scan.rs  service.rs  show.rs  sync.rs  watch.rs  watchlist.rs  workflow.rs
src/db/: mod.rs  schema.rs
src/llm/: api_anthropic.rs  api_gemini.rs  cli_claude.rs  cli_gemini.rs  mod.rs
src/tachibana/: compress.rs  event.rs  mod.rs  order.rs  request.rs
tests/: db_test.rs  execute_test.rs  indicators_test.rs  portfolio_test.rs  scan_test.rs  sync_test.rs
(+166 files in other folders)
