[package]
name = "keketrade"
version = "0.1.0"
edition = "2024"
default-run = "kktd"

[[bin]]
name = "kktd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.7"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Financial math
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Technical analysis
rust_ti = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Output formatting
tabled = "0.20"

# CLI detection
which = "7"

# Async trait (for LLM backend)
async-trait = "0.1"

# Spec hashing
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
